# assistant_api

./: .gitignore  alembic.ini  auth.py  database.py  main.py  pyproject.toml  requirements.txt  setup.py
alembic/versions/: 83500922b6a0_add_theme_color_to_settings.py  cefa7c4eb298_fill_theme_color.py  f1b65a093bdd_fill_theme_color.py
core/: auth.py  database.py
crud/: __init__.py  meal_plan.py  settings.py  users.py
models/: __init__.py  app_settings_models.py  meal_plan.py  settings.py  token_models.py  user.py  user_models.py
repositories/: app_settings_repository.py  user_repository.py
routers/: auth.py  auth_router.py  meal_plan.py  settings_router.py  users.py
schemas/: __init__.py  app_settings_schema.py  meal_plan.py  settings.py  user_schema.py  users.py
