[tool.poetry]
name = "assistant-api"
version = "0.1.0"
description = ""
authors = ["aeteseb <113799213+aeteseb@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "assistant_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.2"}
uvicorn = "^0.23.2"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-dotenv = "^1.0.0"
bcrypt = "^4.0.1"
sqlalchemy = "^2.0.21"
requests = "^2.31.0"
alembic = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"